--- a/WhileAbstractInterpreter/WhileAbstractInterpreter.fsproj
+++ b/WhileAbstractInterpreter/WhileAbstractInterpreter.fsproj
@@ -22,7 +22,7 @@
 		<!--Normal files -->
 		<Compile Include="Domains\Domain.fs" />
 		<Compile Include="Domains\IntervalDomain.fs" />
-		<Compile Include="AbstractDomain.fs" />
+		<Compile Include="AbstractState.fs" />
 		<Compile Include="Program.fs" />
 	</ItemGroup>
 	<ItemGroup>
