Added basic tests (that don't require widening) and fixed a small bug

--- a/WhileAbstractInterpreter.Test/WhileAbstractInterpreter.Test.fsproj
+++ b/WhileAbstractInterpreter.Test/WhileAbstractInterpreter.Test.fsproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="TestSignDomain.fs" />
     <Compile Include="TestIntervalDomain.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
