--- a/WhileAbstractInterpreter.Test/WhileAbstractInterpreter.Test.fsproj
+++ b/WhileAbstractInterpreter.Test/WhileAbstractInterpreter.Test.fsproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Compile Include="TestSignDomain.fs" />
     <Compile Include="TestIntervalDomain.fs" />
+    <Compile Include="TestCongruenceDomain.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
